<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_columnSpan="2"
    android:layout_gravity="center_horizontal"
    tools:context=".ui.fragments.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">

            <ImageView
                android:id="@+id/register_moxie_logo"
                android:layout_width="168dp"
                android:layout_height="158dp"
                android:src="@drawable/app_logo"
                app:layout_columnSpan="2"
                app:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/login_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_heading"
                android:textColor="@color/lighter_green"
                android:textFontWeight="15"
                android:textSize="28sp"
                app:layout_columnSpan="2"
                app:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/register_error_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_error"
                android:visibility="gone"
                app:layout_columnSpan="2"
                app:layout_gravity="center_horizontal"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="120dp" />

            <ImageView
                android:id="@+id/register_email_icon"
                android:layout_width="32dp"
                android:layout_height="22dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/email"
                app:layout_gravity="center_vertical"
                app:tint="@color/moxie_orange" />

            <EditText
                android:id="@+id/register_username"
                android:layout_width="287dp"
                android:layout_height="58dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:hint="@string/prompt_email"
                android:inputType="text|textEmailAddress"
                android:minHeight="48dp"
                android:selectAllOnFocus="true" />


            <ImageView
                android:id="@+id/register_password_icon"
                android:layout_width="41dp"
                android:layout_height="38dp"
                android:src="@drawable/ic_baseline_password_24"
                app:layout_gravity="center"
                app:tint="@color/moxie_orange" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="287dp"
                android:layout_height="54dp"
                android:autofillHints=""
                android:hint="@string/prompt_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:selectAllOnFocus="true" />


            <ImageView
                android:id="@+id/register_confirm_password_icon"
                android:layout_width="41dp"
                android:layout_height="38dp"
                android:src="@drawable/ic_baseline_password_24"
                app:layout_gravity="center"
                app:tint="@color/moxie_orange" />

            <EditText
                android:id="@+id/register_password_confirm"
                android:layout_width="287dp"
                android:layout_height="54dp"
                android:autofillHints=""
                android:hint="@string/prompt_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:selectAllOnFocus="true" />


            <ImageView
                android:id="@+id/register_firstname_icon"
                android:layout_width="39dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_person_24"
                app:layout_gravity="center"
                app:tint="@color/moxie_orange" />

            <EditText
                android:id="@+id/register_firstname"
                android:layout_width="287dp"
                android:layout_height="54dp"
                android:autofillHints=""
                android:hint="@string/prompt_firstname"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:minHeight="48dp"
                android:selectAllOnFocus="true" />

            <ImageView
                android:id="@+id/register_surname_icon"
                android:layout_width="39dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_person_24"
                app:layout_gravity="center"
                app:tint="@color/moxie_orange" />

            <EditText
                android:id="@+id/register_surname"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/prompt_surname"
                android:imeOptions="actionDone"
                android:minHeight="48dp"
                android:selectAllOnFocus="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_button"
                android:layout_width="241dp"
                android:layout_height="49dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/darker_moxie_orange"
                android:text="@string/register_text"
                android:textColor="@color/white"
                app:layout_columnSpan="2"
                app:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_columnSpan="2"
                app:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/no_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/existing_account"
                    android:textSize="17sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="@color/lighter_green"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/white" />
            </LinearLayout>

        </androidx.gridlayout.widget.GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>