...
                android:layout_marginRight="10dp"
                android:src="@drawable/email"
                app:layout_gravity="center_horizontal|center_vertical"
                app:tint="@color/moxie_orange" />

            <EditText
                android:id="@+id/username"
                android:layout_width="287dp"
                android:layout_height="58dp"
                android:layout_marginTop="7dp"
                android:autofillHints=""
                android:hint="@string/prompt_email"
                android:inputType="text|textEmailAddress"
...
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_baseline_password_24"
                app:layout_gravity="center_vertical"
                app:tint="@color/moxie_orange" />

            <EditText
                android:id="@+id/password"
                android:layout_width="287dp"
                android:layout_height="54dp"
                android:autofillHints=""
                android:hint="@string/prompt_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:selectAllOnFocus="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="282dp"
                android:layout_height="56dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/darker_moxie_orange"
                android:enabled="true"
...
                    android:id="@+id/no_account_text"
                    android:layout_width="154dp"
                    android:layout_height="22dp"
                    android:text="@string/no_account" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_register_button"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="@color/lighter_green"
                    android:text="@string/register_text"
                    android:textColor="@color/white" />
...
