<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Settings"
        android:id="@+id/settings_action_bar"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom"
        android:background="@color/white"
        android:iconTint="@color/lighter_moxie">

        <menu>
            <item android:title="Log Out"
                android:id="@+id/logout"
                android:icon="@drawable/ic_baseline_settings_24"
                tools:ignore="HardcodedText"/>
            <item android:title="Your Account"
                android:id="@+id/changeDataProvider"
                android:icon="@drawable/ic_baseline_settings_24"
                tools:ignore="HardcodedText"/>
        </menu>

    </item>
...
